--- a/CharacterManager.Tests/CharacterManager.Tests.csproj
+++ b/CharacterManager.Tests/CharacterManager.Tests.csproj
@@ -74,7 +74,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="CharacterTests.cs" />
+    <Compile Include="Models\CharacterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExtendedAssert.cs" />
   </ItemGroup>
