chore(cleanup): namespace changes

--- a/CharacterManager.Tests/CharacterManager.Tests.csproj
+++ b/CharacterManager.Tests/CharacterManager.Tests.csproj
@@ -74,6 +74,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Context\ContextTests.cs" />
     <Compile Include="Models\CharacterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExtendedAssert.cs" />
