--- a/CharacterManager/CharacterManager.csproj
+++ b/CharacterManager/CharacterManager.csproj
@@ -118,7 +118,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Context\Context.cs" />
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\Class.cs" />
     <Compile Include="Models\Faction.cs" />
@@ -131,6 +131,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Context\Configurations\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
   <PropertyGroup>
