--- a/CharacterManager/CharacterManager.csproj
+++ b/CharacterManager/CharacterManager.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Context\Configurations\FactionTypeConfiguration.cs" />
     <Compile Include="Context\ApplicationContext.cs" />
     <Compile Include="Controllers\CharactersController.cs" />
+    <Compile Include="Profiles\CharacterProfile.cs" />
     <Compile Include="Migrations\201510190041412_Initial.cs" />
     <Compile Include="Migrations\201510190041412_Initial.Designer.cs">
       <DependentUpon>201510190041412_Initial.cs</DependentUpon>
@@ -167,6 +168,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CharacterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
