--- a/CharacterManager/CharacterManager.csproj
+++ b/CharacterManager/CharacterManager.csproj
@@ -140,7 +140,7 @@
   <ItemGroup>
     <Compile Include="Context\Configurations\CharacterTypeConfiguration.cs" />
     <Compile Include="Context\Configurations\ClassTypeConfiguration.cs" />
-    <Compile Include="Context\Configurations\ValidRacialClassTypeConfiguration.cs" />
+    <Compile Include="Context\Configurations\InvalidRacialClassTypeConfiguration.cs" />
     <Compile Include="Context\Configurations\RaceTypeConfiguration.cs" />
     <Compile Include="Context\Configurations\FactionTypeConfiguration.cs" />
     <Compile Include="Context\ApplicationContext.cs" />
@@ -149,8 +149,12 @@
     <Compile Include="Migrations\201510210441533_ValidRacialClasses.Designer.cs">
       <DependentUpon>201510210441533_ValidRacialClasses.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510210446043_ValidRacialClassesRenamed.cs" />
+    <Compile Include="Migrations\201510210446043_ValidRacialClassesRenamed.Designer.cs">
+      <DependentUpon>201510210446043_ValidRacialClassesRenamed.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Repository.cs" />
-    <Compile Include="Models\ValidRacialClass.cs" />
+    <Compile Include="Models\InvalidRacialClass.cs" />
     <Compile Include="Profiles\CharacterProfile.cs" />
     <Compile Include="Migrations\201510190041412_Initial.cs" />
     <Compile Include="Migrations\201510190041412_Initial.Designer.cs">
@@ -203,6 +207,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201510210441533_ValidRacialClasses.resx">
       <DependentUpon>201510210441533_ValidRacialClasses.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510210446043_ValidRacialClassesRenamed.resx">
+      <DependentUpon>201510210446043_ValidRacialClassesRenamed.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
