--- a/CharacterManager/packages.config
+++ b/CharacterManager/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="4.0.4" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net46" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
@@ -16,5 +17,7 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Swashbuckle" version="5.2.2" targetFramework="net46" />
   <package id="Swashbuckle.Core" version="5.2.2" targetFramework="net46" />
+  <package id="TrackerEnabledDbContext.Common" version="3.1.0" targetFramework="net46" />
+  <package id="TrackerEnabledDbContext.Identity" version="3.1.0" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net46" />
 </packages>
