fix(db connection)

--- a/CharacterManager/Web.config
+++ b/CharacterManager/Web.config
@@ -37,6 +37,9 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  <connectionStrings>
+    <add name="CharacterManagerContext" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Database=CharacterManager;Integrated Security=True;" />
+  </connectionStrings>
   <appSettings>
     <add key="MigrateDatabaseToLatestVersion" value="true" />
   </appSettings>
