--- a/CharacterManager/CharacterManager.csproj
+++ b/CharacterManager/CharacterManager.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Context\Configurations\FactionTypeConfiguration.cs" />
     <Compile Include="Context\ApplicationContext.cs" />
     <Compile Include="Controllers\ClassesController.cs" />
+    <Compile Include="Controllers\FactionsController.cs" />
     <Compile Include="Controllers\RacesController.cs" />
     <Compile Include="Controllers\CharactersController.cs" />
     <Compile Include="Migrations\201510210441533_ValidRacialClasses.cs" />
@@ -203,6 +204,7 @@
     <Compile Include="Models\Repository.cs" />
     <Compile Include="Models\InvalidRacialClass.cs" />
     <Compile Include="Profiles\ClassProfile.cs" />
+    <Compile Include="Profiles\FactionProfile.cs" />
     <Compile Include="Profiles\RaceProfile.cs" />
     <Compile Include="Profiles\CharacterProfile.cs" />
     <Compile Include="Migrations\201510190041412_Initial.cs" />
@@ -237,6 +239,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ClassViewModel.cs" />
+    <Compile Include="ViewModels\FactionViewModel.cs" />
     <Compile Include="ViewModels\RaceViewModel.cs" />
     <Compile Include="ViewModels\CharacterViewModel.cs" />
   </ItemGroup>
